--- a/homework01.ipynb
+++ b/homework01.ipynb
@@ -103,11 +103,11 @@
     "\n",
     "def a_lin(val):\n",
     "    if val <= 0:\n",
-    "        return 0\n",
+    "        return 0.0\n",
     "    elif val > 5:\n",
-    "        return 1\n",
+    "        return 1.0\n",
     "    \n",
-    "    return val/5\n",
+    "    return val/5.0\n",
     "\n",
     "\n",
     "def a_sigmoid(val):\n",
@@ -170,10 +170,7 @@
     "    \n",
     "    for sample in data:\n",
     "        method = methodcaller('classify', sample[1])\n",
-    "        print(f'{sample[0]} {tuple(map(method, neirons))}')\n",
-    "    \n",
-    "    for neiron in neirons:\n",
-    "        print(neiron.weights)"
+    "        print(f'{sample[0]} {tuple(map(method, neirons))}')"
    ]
   },
   {
@@ -196,13 +193,7 @@
       "F (0, 1, 0)\n",
       "G (0, 0, 1)\n",
       "H (0, 0, 1)\n",
-      "I (0, 0, 1)\n",
-      "[-0.7  0.5 -0.8  0.  -0.6 -0.3  0.   0.9  1.8  0.  -0.6 -1.   0.   0.3\n",
-      "  0.4]\n",
-      "[ 0.2  0.2 -0.4  0.2 -0.2  0.4  0.2 -0.7 -1.7  0.2 -0.2 -0.1  0.2  0.2\n",
-      " -0.4]\n",
-      "[ 0.2 -0.3  0.3 -0.2  0.3 -0.1 -0.2 -0.2  0.4 -0.2  0.3  0.4 -0.2  0.1\n",
-      " -0.1]\n"
+      "I (0, 0, 1)\n"
      ]
     }
    ],
@@ -296,19 +287,7 @@
       "I (0.0037253089873815924, 2.5566882336613036e-05, 0.9800763983367607, 0.02047026562186848)\n",
       "! (0.018415486080804077, 4.3871158090628676e-05, 0.013755496597630701, 0.9781077632338467)\n",
       "_ (0.00838609151522248, 0.00038552142987693667, 0.0020254630608827185, 0.9968259609187382)\n",
-      ". (0.0038839340759217974, 0.004995083061712131, 0.00800573804759111, 0.9960332877179408)\n",
-      "[-0.96971811  3.02707473 -5.84715074  2.04291745 -5.47099779  1.43491312\n",
-      "  2.04291745  4.01496209  8.74040694  2.04291745 -1.61289704 -9.46736101\n",
-      " -1.32174308  3.09533952  2.09599902]\n",
-      "[  2.64463763   1.81057906  -0.16531172   2.1161967   -1.20226054\n",
-      "   1.38486553   2.1161967   -5.34823445 -11.72845602   2.1161967\n",
-      "  -0.53997756   0.20833762   1.45280894  -3.26555644  -4.01904348]\n",
-      "[ 2.31781849 -2.16901855  5.16846656 -1.4156961   3.25090259 -2.57993762\n",
-      " -1.4156961  -0.53479105  4.82541378 -1.4156961   8.16819129  4.48254881\n",
-      " -3.02728362 -1.63336034  1.64691299]\n",
-      "[-2.08268156 -1.67288091 -1.56129365 -2.28799329  0.53772179 -0.80409022\n",
-      " -2.28799329 -0.59119619 -0.7621905  -2.28799329 -7.66758698 -1.01897379\n",
-      " -0.21096341  2.96640624  0.4346916 ]\n"
+      ". (0.0038839340759217974, 0.004995083061712131, 0.00800573804759111, 0.9960332877179408)\n"
      ]
     }
    ],
@@ -344,18 +323,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 1 0 1 0 1 1 1 1 1 0 1 1 0 1]\n",
-      " [1 1 1 1 0 0 1 1 0 1 0 0 1 1 1]\n",
-      " [1 1 0 1 0 1 1 0 1 1 0 1 1 1 0]\n",
-      " [1 1 0 1 0 1 1 1 0 1 0 1 1 1 0]\n",
-      " [1 1 1 1 0 0 1 0 0 1 0 0 1 1 1]\n",
-      " [1 1 1 1 0 0 1 1 0 1 0 0 1 0 0]\n",
-      " [1 1 1 1 0 0 1 0 1 1 0 1 1 1 1]\n",
-      " [1 0 1 1 0 1 1 1 1 1 0 1 1 0 1]\n",
-      " [0 1 0 0 1 0 0 1 0 0 1 0 0 1 0]\n",
-      " [0 1 0 0 1 0 0 1 0 0 0 0 0 1 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 1 1 1]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 1 0]]\n",
       "[[1 0 0 0]\n",
       " [1 0 0 0]\n",
       " [1 0 0 0]\n",
@@ -368,18 +335,18 @@
       " [0 0 0 1]\n",
       " [0 0 0 1]\n",
       " [0 0 0 1]]\n",
-      "[[0.4057499  0.2425949  0.2663701  0.08528512]\n",
-      " [0.30167082 0.33106974 0.24818288 0.11907658]\n",
-      " [0.37733    0.2791558  0.24807459 0.09543963]\n",
-      " [0.36596152 0.3197736  0.21923439 0.09503048]\n",
-      " [0.2787835  0.32859215 0.24841893 0.14420544]\n",
-      " [0.2959681  0.35381326 0.2363469  0.11387179]\n",
-      " [0.32631972 0.27099514 0.30222756 0.10045753]\n",
-      " [0.33388078 0.25433013 0.3253257  0.08646336]\n",
-      " [0.0913469  0.1572321  0.279085   0.47233593]\n",
-      " [0.08640224 0.15662202 0.23808245 0.51889324]\n",
-      " [0.07208201 0.13494064 0.20582598 0.58715135]\n",
-      " [0.0515318  0.11512755 0.18218212 0.6511586 ]]\n"
+      "[[0.37047184 0.2304135  0.2934439  0.10567079]\n",
+      " [0.2994195  0.36587617 0.20893149 0.12577288]\n",
+      " [0.3621907  0.29258814 0.23302452 0.11219666]\n",
+      " [0.35252976 0.37638938 0.16325071 0.10783017]\n",
+      " [0.2886803  0.36144426 0.20185332 0.1480222 ]\n",
+      " [0.29444072 0.41434592 0.17537645 0.1158369 ]\n",
+      " [0.29668406 0.23614568 0.36185062 0.10531965]\n",
+      " [0.2921281  0.20554838 0.41453084 0.08779269]\n",
+      " [0.1139712  0.12026215 0.3248356  0.44093102]\n",
+      " [0.11942177 0.13622987 0.23930153 0.50504684]\n",
+      " [0.11129063 0.11937999 0.2033159  0.5660135 ]\n",
+      " [0.08803236 0.10625695 0.1827992  0.62291145]]\n"
      ]
     }
    ],
@@ -390,7 +357,6 @@
     "model.compile(optimizer='adam', loss='categorical_crossentropy')\n",
     "\n",
     "np_letters = np.array(tuple(np.array(letter[1]) for letter in letters))\n",
-    "print(np_letters)\n",
     "targets = np.array(tuple(np.array(letter[2]) for letter in letters))\n",
     "print(targets)\n",
     "\n",
@@ -405,7 +371,7 @@
    "id": "7f4fe82a-f35c-4504-9290-bfd4544ac7f8",
    "metadata": {},
    "source": [
-    "**Interesanti**, bet TensorFlow versija apstiprināja manas šaubas par \"I\" un \"!\" lidzīguma problēmu, kāmēr bez TensorFlow klasifikācija nostrādāja pareizi. Ar parējiem burtiem arī ir redzamas problēmas - B tiek pieskaitīts pie 2. klases. Vispirms domāju, ka epohu skaits ir pie vainas, bet, darot 2. mājasdarbu, ieguvu nedaudz pieredzes un sapratu, ka pēc noklusējuma TensorFlow izmanto batch_size=32, bet oriģinālais modelis strādā batch_size=1 režīmā. Pārbaudīsim:"
+    "**Interesanti**, bet TensorFlow versija apstiprināja manas šaubas par \"I\" un \"!\" lidzīguma problēmu, kāmēr bez TensorFlow klasifikācija nostrādāja pareizi. Ar parējiem burtiem arī ir redzamas problēmas - B tiek pieskaitīts pie 2. klases. Laikam vajag izmantot to pašu learning_rate:"
    ]
   },
   {
@@ -420,22 +386,74 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.46556696 0.20971623 0.28771672 0.03700005]\n",
-      " [0.3171911  0.41533726 0.21253535 0.05493634]\n",
-      " [0.4245003  0.29753134 0.23495908 0.0430093 ]\n",
-      " [0.39692888 0.41605994 0.15271471 0.03429645]\n",
-      " [0.2911333  0.41151187 0.21722504 0.08012976]\n",
-      " [0.29453287 0.4920148  0.16841164 0.04504079]\n",
-      " [0.32661724 0.2329083  0.38682872 0.05364579]\n",
-      " [0.31730422 0.19451658 0.44316012 0.04501912]\n",
-      " [0.0874395  0.10797236 0.3486351  0.45595306]\n",
-      " [0.0668207  0.09721947 0.22486073 0.6110991 ]\n",
-      " [0.03653334 0.05261028 0.14601709 0.76483935]\n",
-      " [0.02317738 0.04201355 0.11418518 0.82062393]]\n"
+      "[[9.7850138e-01 3.9678505e-03 1.7529514e-02 1.2821092e-06]\n",
+      " [7.9518217e-01 1.7347169e-01 3.1345189e-02 9.0954171e-07]\n",
+      " [7.7770329e-01 2.1985644e-01 2.4283789e-03 1.1892006e-05]\n",
+      " [1.7629546e-01 8.2368726e-01 1.4823294e-05 2.4451660e-06]\n",
+      " [3.0767524e-01 6.7438763e-01 1.7931392e-02 5.6735616e-06]\n",
+      " [1.1542365e-01 8.7913316e-01 5.4004663e-03 4.2619431e-05]\n",
+      " [7.2594583e-02 7.8612077e-04 9.2661911e-01 1.0930746e-07]\n",
+      " [2.4757013e-02 1.3824074e-04 9.7510457e-01 1.7496119e-07]\n",
+      " [3.3068235e-03 3.2525688e-05 9.9658835e-01 7.2217714e-05]\n",
+      " [8.8739239e-02 8.4000407e-03 2.7733073e-01 6.2553006e-01]\n",
+      " [3.0002363e-02 3.2191142e-02 3.0051593e-02 9.0775484e-01]\n",
+      " [1.3530486e-04 8.8708272e-04 4.0348867e-04 9.9857414e-01]]\n"
      ]
     }
    ],
    "source": [
+    "model = tf.keras.models.Sequential()\n",
+    "model.add(tf.keras.layers.Dense(15, kernel_regularizer=tf.keras.regularizers.l2(0.1), activation='sigmoid', input_shape=(15, )))\n",
+    "model.add(tf.keras.layers.Dense(4, activation='softmax'))\n",
+    "optimizer = tf.keras.optimizers.Adam(learning_rate=learning_rate)\n",
+    "model.compile(optimizer=optimizer, loss='categorical_crossentropy')\n",
+    "\n",
+    "model.fit(np_letters, targets, epochs=1000, verbose=0)\n",
+    "predictions = model.predict(np_letters)\n",
+    "\n",
+    "print(predictions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a383854c-fb4d-482d-9c47-fee519175c06",
+   "metadata": {},
+   "source": [
+    "Tagad ir pariza atbilde. Bet darot 2. mājasdarbu, ieguvu nedaudz pieredzes un sapratu, ka pēc noklusējuma TensorFlow izmanto batch_size=32, bet oriģinālais modelis strādā batch_size=1 režīmā. Pārbaudīsim:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f4a85738-ee04-4ab8-8388-21df9ab2f157",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3.05631578e-01 1.51655555e-01 4.88562882e-01 5.41500151e-02]\n",
+      " [3.86233449e-01 3.92386198e-01 2.17745125e-01 3.63524002e-03]\n",
+      " [3.63157481e-01 2.43554294e-01 3.74557376e-01 1.87308919e-02]\n",
+      " [3.85635704e-01 4.00453389e-01 2.10592687e-01 3.31821805e-03]\n",
+      " [3.86552691e-01 3.86719853e-01 2.22852662e-01 3.87472543e-03]\n",
+      " [3.79664510e-01 4.43765670e-01 1.74557656e-01 2.01221416e-03]\n",
+      " [2.96097517e-01 1.41287014e-01 5.01036882e-01 6.15785606e-02]\n",
+      " [1.05644405e-01 2.51650922e-02 4.91024464e-01 3.78166050e-01]\n",
+      " [1.33664876e-01 3.56054790e-02 5.28038085e-01 3.02691609e-01]\n",
+      " [2.43924633e-02 3.45864682e-03 2.41100103e-01 7.31048822e-01]\n",
+      " [3.15344590e-03 2.56100378e-04 7.01030493e-02 9.26487446e-01]\n",
+      " [1.52069435e-03 1.02617458e-04 4.42582332e-02 9.54118490e-01]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = tf.keras.models.Sequential()\n",
+    "model.add(tf.keras.layers.Dense(15, kernel_regularizer=tf.keras.regularizers.l2(0.1), activation='sigmoid', input_shape=(15, )))\n",
+    "model.add(tf.keras.layers.Dense(4, activation='softmax'))\n",
+    "optimizer = tf.keras.optimizers.Adam(learning_rate=learning_rate)\n",
+    "model.compile(optimizer=optimizer, loss='categorical_crossentropy')\n",
+    "\n",
     "model.fit(np_letters, targets, batch_size=1, epochs=1000, verbose=0)\n",
     "predictions = model.predict(np_letters)\n",
     "\n",
@@ -447,7 +465,7 @@
    "id": "083eebf9-bff8-4280-90d3-31565ae46c8b",
    "metadata": {},
    "source": [
-    "Tagad sakrīt."
+    "Abos gadījumos atbilde ir pareiza, bet oriģinālā tomēr precīzāk sanāca."
    ]
   }
  ],
